Prevent random horizontal scroll http://i.imgur.com/3lt53pY.png

--- a/styles/theme-medium.css
+++ b/styles/theme-medium.css
@@ -19,6 +19,7 @@ html {
 body {
   background:#fff;
   color: black;
+  overflow-x: hidden;
 }
 
 abbr {
